@@ -194,6 +194,16 @@ cMatrix invert_svd(const cMatrix& A);
 
 /////////////////////////////////////////////////////////////////////////////
 //
+// determinant
+//
+/////////////////////////////////////////////////////////////////////////////
+
+Complex determinant(const cMatrix& A);
+
+
+
+/////////////////////////////////////////////////////////////////////////////
+//
 // do LU decomposition of matrix A.
 //
 //   Low level routine. Mostly not needed to use explicitly.
